cmake_minimum_required(VERSION 3.10)
project(Leetcode)

add_subdirectory(TwoSum)
add_subdirectory(RomanToInteger)
add_subdirectory(LongestCommonPrefix)
add_subdirectory(ValidParentheses)
add_subdirectory(MergeTwoSortedLists)
add_subdirectory(RemoveDuplicates)
add_subdirectory(FindTheIndexOfTheFirstOccurrenceInAString)
add_subdirectory(PlusOne)
add_subdirectory(Sqrt)
add_subdirectory(ClimbingStairs)
add_subdirectory(BinaryTreeInorderTraversal)
add_subdirectory(SymetricTree)
add_subdirectory(MaximumDepthOfBinaryTree)