cmake_minimum_required(VERSION 3.10)
project(Leetcode)

add_subdirectory(MyLibrary)
add_subdirectory(TwoSum)
add_subdirectory(RomanToInteger)
add_subdirectory(LongestCommonPrefix)
add_subdirectory(ValidParentheses)
add_subdirectory(MergeTwoSortedLists)
add_subdirectory(RemoveDuplicates)
add_subdirectory(FindTheIndexOfTheFirstOccurrenceInAString)
add_subdirectory(PlusOne)
add_subdirectory(Sqrt)
add_subdirectory(ClimbingStairs)
add_subdirectory(BinaryTreeInorderTraversal)
add_subdirectory(SymetricTree)
add_subdirectory(MaximumDepthOfBinaryTree)
add_subdirectory(ConvertSortedArrayToBinarySearchTree)
add_subdirectory(PascalsTriangle)
add_subdirectory(BestTimeToBuyAndSellStock)
add_subdirectory(ValidPalindrome)
add_subdirectory(SingleNumber)
add_subdirectory(LinkedListCycle)
add_subdirectory(IntersectionOfTwoLinkedLists)
add_subdirectory(MajorityElement)
add_subdirectory(ReverseBits)
add_subdirectory(NumberOf1Bits)
add_subdirectory(HappyNumber)
add_subdirectory(ContainsDuplicate)
add_subdirectory(ValidAnagram)