cmake_minimum_required(VERSION 3.25)
project(Leetcode)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/b514bdc898e2951020cbdca1304b75f5950d1f59.zip
  )
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
enable_testing()
set(CMAKE_CXX_CLANG_TIDY clang-tidy)

add_subdirectory(MyLibrary)
add_subdirectory(TwoSum)
add_subdirectory(RomanToInteger)
add_subdirectory(LongestCommonPrefix)
add_subdirectory(ValidParentheses)
add_subdirectory(MergeTwoSortedLists)
add_subdirectory(RemoveDuplicates)
add_subdirectory(FindTheIndexOfTheFirstOccurrenceInAString)
add_subdirectory(PlusOne)
add_subdirectory(Sqrt)
add_subdirectory(ClimbingStairs)
add_subdirectory(BinaryTreeInorderTraversal)
add_subdirectory(SymetricTree)
add_subdirectory(MaximumDepthOfBinaryTree)
add_subdirectory(ConvertSortedArrayToBinarySearchTree)
add_subdirectory(PascalsTriangle)
add_subdirectory(BestTimeToBuyAndSellStock)
add_subdirectory(ValidPalindrome)
add_subdirectory(SingleNumber)
add_subdirectory(LinkedListCycle)
add_subdirectory(IntersectionOfTwoLinkedLists)
add_subdirectory(MajorityElement)
add_subdirectory(ReverseBits)
add_subdirectory(NumberOf1Bits)
add_subdirectory(HappyNumber)
add_subdirectory(ContainsDuplicate)
add_subdirectory(ValidAnagram)
add_subdirectory(MissingNumber)      

add_subdirectory(1004MaxConsecutiveOnesIII)
add_subdirectory(1493LongestSubarrayof1sAfterDeletingOneElement)
add_subdirectory(1456MaximumNumberofVowelsinaSubstringofGivenLength)
add_subdirectory(724FindPivotIndex)
add_subdirectory(1657DetermineifTwoStringsAreClose)
add_subdirectory(2390RemovingStarsFromaString)
add_subdirectory(735AsteroidCollision)
add_subdirectory(394DecodeString)
add_subdirectory(2352EqualRowandColumnPairs)
add_subdirectory(443StringCompression)
add_subdirectory(649Dota2Senate)
add_subdirectory(605CanPlaceFlowers)
add_subdirectory(2095DeletetheMiddleNodeofaLinkedList)

